<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="7"
    android:layout_centerInParent="true"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:layout_gravity="top|center"
    tools:context="com.example.michaelmonty.calculator_monty.MainActivity">

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:id="@+id/prevAnsTextView"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        />


    <Button
        android:text="@string/clearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearAll"
        android:textSize="25sp" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:textSize="25sp" />

    <Button
        android:text="@string/plusMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plusMinus"
        android:textSize="25sp" />

    <Button
        android:text="@string/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/div"
        android:textSize="25sp" />

    <Button
        android:text="@string/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seven"
        android:textSize="25sp" />

    <Button
        android:text="@string/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eight"
        android:textSize="25sp" />

    <Button
        android:text="@string/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nine"
        android:textSize="25sp" />

    <Button
        android:text="@string/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mult"
        android:textSize="25sp" />

    <Button
        android:text="@string/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/four"
        android:textSize="25sp" />

    <Button
        android:text="@string/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/five"
        android:textSize="25sp" />

    <Button
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/six"
        android:textSize="25sp" />

    <Button
        android:text="@string/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sub"
        android:textSize="25sp" />

    <Button
        android:text="@string/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one"
        android:textSize="25sp" />

    <Button
        android:text="@string/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:textSize="25sp" />

    <Button
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:textSize="25sp" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:textSize="25sp" />

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zero"
        android:textSize="25sp"/>

    <Button
        android:text="@string/decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decimal"
        android:textSize="25sp" />

    <Button
        android:text="@string/equals"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/equals"
        android:textSize="25sp"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:id="@+id/I_OTextView"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        />

</GridLayout>
